--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">GJB_IDK2</string>
     <string name="enter_time">enter_time</string>
+    <string name="login">Login</string>
+    <string name="email">Email</string>
 </resources>
